@@ -18,10 +18,12 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.header.writers.CrossOriginOpenerPolicyHeaderWriter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -31,7 +33,6 @@ public class SecurityConfig {
 
     private final JwtFilter jwtFilter;
 
-    // 🔹 Injection du filtre JWT via le constructeur
     public SecurityConfig(@Lazy JwtFilter jwtFilter) {
         this.jwtFilter = jwtFilter;
     }
@@ -39,21 +40,27 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         return http
-                .csrf(csrf -> csrf.disable())  // 🔥 Désactiver CSRF (utile pour les API REST)
-                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // 🔹 Activation CORS
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)) // 🔥 Mode stateless
+                .csrf(csrf -> csrf.disable())
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .headers(headers -> headers
+                        .crossOriginOpenerPolicy(coop -> coop
+                                .policy(CrossOriginOpenerPolicyHeaderWriter.CrossOriginOpenerPolicy.SAME_ORIGIN_ALLOW_POPUPS)
+                        )
+                        .frameOptions(frame -> frame.sameOrigin())
+                        .contentSecurityPolicy(csp -> csp
+                                .policyDirectives("default-src 'self'; script-src 'self' https://accounts.google.com; connect-src 'self' https://accounts.google.com")
+                        )
+                )
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
                         .requestMatchers(
-                                "/auth/registration",
-                                "/auth/login",
-                                "/auth/send-verification-code",
-                                "/auth/verify-code",
-                                "/auth/me",
+                                "/auth/**",
+                                "/oauth2/**",
+                                "/login/oauth2/**",
                                 "/error",
                                 "/swagger-ui/**",
                                 "/v3/api-docs/**",
                                 "/swagger-ui.html",
-                                "/auth/token/{email}",
                                 "/user/update/{id}",
                                 "/user/delete/{id}",
                                 "/reclamations/**",
@@ -63,15 +70,12 @@ public class SecurityConfig {
                                 "/user/get/all",
                                 "/user/filter",
                                 "/user/users/sorted",
-                                "/auth/User",
-                                "/auth/Admin", // 👈 ajoute ceci si tu veux le rendre public temporairement
-                                "/auth/logout",
                                 "/user/users/stats"
-                        ).permitAll()  //  Routes accessibles sans authentification
-                        .anyRequest().authenticated() //  Sécuriser toutes les autres routes
+                        ).permitAll()
+                        .anyRequest().authenticated()
                 )
-                .authenticationProvider(authenticationProvider()) // 🔹 Utilisation de l'authenticationProvider
-                .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class) // 🔥 Ajout du filtre JWT ici
+                .authenticationProvider(authenticationProvider())
+                .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class)
                 .build();
     }
 
@@ -98,21 +102,24 @@ public class SecurityConfig {
         return authenticationConfiguration.getAuthenticationManager();
     }
 
-    // 🔥 CORS configuration update to allow only specific origin (e.g., localhost:4200)
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:4200")); // Change "*" to specific origin
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type"));
-        configuration.setAllowCredentials(true); // Allow sending credentials (cookies, tokens)
+        configuration.setAllowedOrigins(Arrays.asList(
+                "http://localhost:4200",
+                "https://accounts.google.com"
+        ));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
+        configuration.setExposedHeaders(Arrays.asList("Authorization"));
+        configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 
-    // Swagger config for Bearer authentication (JWT)
     @Configuration
     @SecurityScheme(
             name = "BearerAuth",
@@ -120,6 +127,6 @@ public class SecurityConfig {
             scheme = "bearer",
             bearerFormat = "JWT"
     )
-    public class SwaggerConfig {
+    public static class SwaggerConfig {
     }
 }
